--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SignUpActivity" android:parentActivityName=".activities.MainActivity">
+        <activity android:name=".activities.TripDetailsActivity" android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.SignUpActivity"
+            android:parentActivityName=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,9 +34,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAVrEaDn75LPDwD6-mYZ-MOcBkfp9YMcnQ" />
 
-        <activity android:name=".activities.MainActivity">
-
-        </activity>
+        <activity android:name=".activities.MainActivity"></activity>
     </application>
 
 </manifest>
